--- a/Project/views/common/sidebar.ejs
+++ b/Project/views/common/sidebar.ejs
@@ -41,6 +41,12 @@
                   <p>Category</p>
                 </a>
               </li>
+              <li class="nav-item">
+                <a href="/subcategory" class="nav-link">
+                  <i class="nav-icon bi bi-palette"></i>
+                  <p>Subategory</p>
+                </a>
+              </li>
             </ul>
             <!--end::Sidebar Menu-->
           </nav>
